...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.mapbox.mapboxsdk.maps.MapView
            android:id="@+id/mapView"
            mapbox_myLocation="true"
            mapbox_myLocationDrawable="@drawable/mapbox_mylocation_icon_default"
            mapbox_myLocationTintColor="@color/mapbox_blue"
            mapbox_styleUrl="@string/mapbox_style_mapbox_streets"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <com.mapbox.services.android.ui.geocoder.GeocoderAutoCompleteView
            android:id="@+id/autoCompleteView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="70dp"
...
